--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/less/theme/base.less
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/less/theme/base.less
@@ -426,6 +426,8 @@
 
 @HighlightedTerm-background: #ffa;
 
+@user-search-background: #f5f5f5;
+
 // Image alignment
 @ImageAligned-border: 1px solid #ddd;
 @ImageAligned-caption-color: #666;
